Onboarded into github and renamed project

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CAR Tracker — MVP</title>
+  <title>Nexus — Data Hub</title>
   <link rel="stylesheet" href="/styles.css" />
   <!-- Inline favicon to stop 404s -->
-  <link rel="icon" href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><rect width="64" height="64" rx="12" fill="%231d2230"/><text x="50%" y="54%" font-size="32" text-anchor="middle" fill="%23cfe0ff" font-family="Segoe UI, Roboto, Arial">C</text></svg>' />
+  <link rel="icon" href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><rect width="64" height="64" rx="12" fill="%231d2230"/><text x="50%" y="54%" font-size="32" text-anchor="middle" fill="%23cfe0ff" font-family="Segoe UI, Roboto, Arial">N</text></svg>' />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <!-- Defer so the script runs after the DOM is parsed -->
   <script defer src="/app.js"></script>
 </head>
 <body>
   <header>
-    <h1>CAR Tracker — MVP</h1>
+    <h1>Nexus — Data Hub</h1>
     <div class="toolbar">
       <button id="loadBtn">Load Latest CSV</button>
       <button id="saveBtn">Save Snapshot</button>
@@ -23,7 +23,7 @@
   </header>
 
   <nav>
-    <button data-tab="cars">CARs</button>
+    <button data-tab="portfolios">Portfolios</button>
     <button data-tab="project_groups">Project Groups</button>
     <button data-tab="projects">Projects</button>
     <button data-tab="categories">Categories</button>
