--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,12 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Nexus — Data Hub</title>
   <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="/tree.css" />
   <!-- Inline favicon to stop 404s -->
   <link rel="icon" href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><rect width="64" height="64" rx="12" fill="%231d2230"/><text x="50%" y="54%" font-size="32" text-anchor="middle" fill="%23cfe0ff" font-family="Segoe UI, Roboto, Arial">N</text></svg>' />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script defer src="/config.js?v=20230925T0100"></script>
   <script defer src="/apiNew.js?v=20230925T0100"></script>
   <script defer src="/api/index.js?v=20230925T0100"></script>
+  <script defer src="/tree.js?v=20230925T0100"></script>
   <!-- Defer so the script runs after the DOM is parsed -->
   <script defer src="/app.js?v=20230925T0100"></script>
 </head>
