--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,15 @@
   <link rel="stylesheet" href="/styles.css" />
   <link rel="stylesheet" href="/bt-tree.css" />
   <link rel="stylesheet" href="/budgetTree.css" />
+  <script type="importmap">
+    {
+      "imports": {
+        "react": "/vendor/react.js",
+        "react-dom": "/vendor/react-dom-client.js",
+        "react-dom/client": "/vendor/react-dom-client.js"
+      }
+    }
+  </script>
   <!-- Inline favicon to stop 404s -->
   <link rel="icon" href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><rect width="64" height="64" rx="12" fill="%231d2230"/><text x="50%" y="54%" font-size="32" text-anchor="middle" fill="%23cfe0ff" font-family="Segoe UI, Roboto, Arial">N</text></svg>' />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
